# haculator

./: CHANGELOG.md  LICENSE  README.md  haculator.cabal
app/: Main.hs
src/: Calculator.hs
src/Calculator/: LinearExpr.hs  LinearExpression.hs  Parser.hs
src/Parser/: AST.hs  Common.hs  Expr.hs  Lexer.hs
test/: Tests.hs
