cabal-version:      2.4
name:               haculator
version:            0.1.0.0
synopsis:           simpl repl for arithmetic expression evaluator

-- A longer description of the package.
-- description:
homepage:           git@github.com:joshcbrown/haculator.git

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             joshcbrown
maintainer:         80245312+joshcbrown@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Calculator,
                      Parser.Expr,
                      Parser.AST,
                      Parser.Lexer,
                      Parser.Common

    -- Modules included in this library but not exported.
    -- other-modules: Calculator.Parser

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: OverloadedStrings
    build-depends:    base ^>=4.17.2.0,
                      megaparsec ^>=9.6.1,
                      containers,
                      text,
                      scientific

    hs-source-dirs:   src
    ghc-options: -Wall
    default-language: Haskell2010

executable haculator
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        haskeline ^>=0.8.2,
        haculator

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite haculator-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Tests.hs
    build-depends:    base ^>=4.17.2.0,
                      QuickCheck ^>=2.14.3,
                      hspec >=2.11.7,
                      haculator
